--- a/stylesheet.css
+++ b/stylesheet.css
@@ -121,7 +121,7 @@ body {
 }
 
 #main {
-	font-family:Consolas, "Courier New" ;
+	font-family:Consolas, "Slabo 27px", "Courier New" ;
 	margin:0px;
 	padding:0px 0px 0px 0px;
 	display:inline-block;
