--- a/stylesheet.css
+++ b/stylesheet.css
@@ -899,3 +899,22 @@ a:visited {
     width: 100% !important;
     height: 100% !important;
 }
+
+#socialmediaicons{
+	display:inline-block;
+	float:right;
+	margin-top:10px;
+	margin-right:30px;
+}
+
+.socialmedia {
+	background-color:#272727;
+	width:50px;
+	height:50px;
+	border-radius:5px;
+	display:inline-block;
+}
+
+.socialmediahighlight {
+	background-color:#3395f0;
+}
