--- a/stylesheet.css
+++ b/stylesheet.css
@@ -657,7 +657,7 @@ body {
 .ig-button {
 	text-align:center;
 	width:100px;
-	height:60px;
+	height:40px;
 	font-size:20px;
 	display:inline-block;
 	background-color:#353535;
@@ -668,6 +668,7 @@ body {
 
 .ig-button p {
 	position:relative;
+	margin:10px 0px 10px 0px;
 }
 
 .igselected {
@@ -929,4 +930,5 @@ a:visited {
 	margin-left:5px;
 	width:20px;
 	height:20px;
+	border-radius:3px;
 }
