--- a/newthingsheet.css
+++ b/newthingsheet.css
@@ -105,8 +105,8 @@
 
 
 #buttondropdown {
-	width:200px;
-	height:280px;
+	width:400px;
+	height:210px;
 	position:absolute;
 	background-color:#262626;
 	left:100px;
@@ -124,8 +124,13 @@
 	display:inline-block;
 	background-color:#262626;
 }
+
 .buttonselecthighlight {
 	background-color:#4a4a4a;
+}
+
+.greyedout {
+	background-color:#000000;
 }
 
 #tlgame {
@@ -207,6 +212,11 @@
 	height:72px;
 
 }
+.tlex {
+	display:inline-block;
+	height:22px;
+
+}
 
 #tline {
 	display:inline-block;
@@ -217,6 +227,16 @@
 	top:0px;
 	left:103px;
 	margin:0px;
+}
+
+.tlexkey {
+	display:inline-block;
+	height:20px;
+	width:100px;
+	background-color:transparent;
+	border:1px solid black;
+	cursor:pointer;
+	vertical-align: top;
 }
 
 .tkey {
@@ -297,7 +317,15 @@
 .playbuttonhighlight2{
 	background-color:black;
 }
-
+.tlexf {
+	display:inline-block;
+	height:20px;
+	width:70px;
+	background-color:#333333;
+	border:1px solid black;
+	cursor:pointer;
+	position:relative;
+}
 
 .tframe {
 	display:inline-block;
@@ -345,4 +373,30 @@
 
 .type2 {
 	background-color:#333333;
+}
+
+.stickprevious {
+	height:20px;
+	width:25px;
+	display:inline-block;
+	background-image:url(assets/copyprev.png);
+}
+
+.sticknext {
+	height:20px;
+	width:25px;
+	display:inline-block;
+	background-image:url(assets/copynext.png);
+}
+
+.stickreset {
+	height:20px;
+	width:20px;
+	display:inline-block;
+	font-size:10px;
+	background-image:url(assets/reset.png);
+}
+
+.stickexcontrolhighlight {
+	background-color:#555555;
 }
