--- a/heatmapsheet2.css
+++ b/heatmapsheet2.css
@@ -1,120 +1,3 @@
-#imgurbox {
-	position:absolute;
-	top:0;
-	right:0;
-	width:167px;
-	height:61px;
-	margin-top:5px;
-	margin-right:7px;
-	cursor:pointer;
-	z-index:251;
-}
-
-#hurtcontrolbox {
-	bottom:100px;
-	left:980px;
-	width:140px;
-	height:100px;
-	z-index:251;
-	position:absolute;
-	text-align:center;
-	margin-left:80px;
-	margin-right:80px;
-
-}
-
-.hbcon {
-	opacity:0.5;
-}
-
-#hurtcontrolbox div {
-	display:inline-block;
-}
-
-.hurtcontrolhighlight {
-	opacity:1;
-}
-
-#hurtcontrolbox div p {
-	line-height:0px;
-}
-
-#hurtboxmidcontrols {
-	position:relative;
-	height:100px;
-	width:140px;
-}
-
-.hbdirection {
-	width:80px;
-	height:75px;
-	background-color:rgba(255, 255, 255, 0.3);
-	cursor:pointer;
-}
-
-#hurtchar {
-	width:140px;
-	height:25px;
-	background-color:rgba(255, 255, 255, 0.3);
-	cursor:pointer;
-}
-
-#hurtchardropdown {
-	display:none;
-	position:absolute;
-	width:140px;
-	height:200px;
-	left:0px;
-	bottom:100px;
-	z-index:100;
-}
-
-.hbcharselect {
-	width:140px;
-	height:25px;
-	background-color:rgba(55, 55, 55, 0.82);
-}
-
-#position {
-	width:70px;
-	height:25px;
-	background-color:rgba(255, 255, 255, 0.3);
-	cursor:pointer;
-}
-
-#flip {
-	width:70px;
-	height:25px;
-	background-color:rgba(255, 255, 255, 0.3);
-	cursor:pointer;
-}
-
-#draghurtcontainer {
-	width:1280px;
-	height:50px;
-	bottom:100px;
-	position:absolute;
-}
-
-#draghurt {
-	width:140px;
-	height:50px;
-	background-color:rgba(255, 255, 255, 0.3);
-	cursor:e-resize;
-	left:980px;
-	z-index:251;
-	position:absolute;
-	text-align:center;
-	margin-left:80px;
-	margin-right:80px;
-	background-image:url(assets/heatmaps/hbdragicon.png);
-	background-size: 100% 100%;
-}
-
-.imgurhighlight {
-	opacity:0.7;
-}
-
 .hitbox {
 	position:absolute;
 	stroke-width:4px;
@@ -137,16 +20,10 @@
 	-webkit-filter: grayscale(50%);
 	filter: grayscale(50%);
 }
-
-#hurtboxcontainer {
-	width:300px;
-	left:980px;
-	position:absolute;
-}
-
 #hurtbox {
 	-webkit-filter: opacity(60%);
 	filter: opacity(60%);
+	margin-left: 75%;
 }
 .flipped {
 	-moz-transform:scale(-1,1);
@@ -297,16 +174,10 @@
 	text-align:center;
 }
 #hbleft {
-	background-image: url(assets/heatmaps/hbarrow.png);
+	background-image: url(assets/arrowleft.png);
 }
 #hbright {
-	background-image: url(assets/heatmaps/hbarrow.png);
-	-moz-transform: scaleX(-1);
-  -o-transform: scaleX(-1);
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  filter: FlipH;
-  -ms-filter: "FlipH";
+	background-image: url(assets/arrowright.png);
 }
 .hurtboxchar {
 	display:inline-block;
@@ -350,14 +221,11 @@
 }
 .speed {
 	display:inline-block;
-	height:25px;
-	width:25px;
+	height:26px;
+	width:30px;
 	cursor:pointer;
 	text-align:center;
 	font-size:12px;
-	border-radius:13px;
-	margin:2px;
-	line-height:2px;
 }
 .allf {
 	height:28px;
@@ -399,7 +267,21 @@
 	top:0px;
 	z-index:100;
 }
-
+#hurtchar {
+	position:relative;
+}
+#hurtcurrent {
+	padding:2px;
+}
+#hurtchardropdown {
+	display:none;
+	position:absolute;
+	width:80px;
+	height:30px;
+	left:90px;
+	top:0px;
+	z-index:100;
+}
 .character {
 	width:80px;
 	height:30px;
