--- a/heatmapsheet2.css
+++ b/heatmapsheet2.css
@@ -1,3 +1,20 @@
+#framenumbers {
+	position:absolute;
+	margin:20px;
+	font-size:35px;
+	width:50px;
+	height:50px;
+	border-radius:25px;
+	text-align:center;
+	line-height:1.3;
+	display:none;
+}
+.nothitting {
+	background-color:black;
+}
+.hitting {
+	background-color:#d73838;
+}
 .attdetails {
 	color:#b0b0b0;
 	font-size:11px;
@@ -9,6 +26,18 @@
 
 .counterattack {
 	color: #5cff98;
+}
+
+.zdrop {
+	color:#e3fe3d;
+}
+
+.airthrow {
+	color:#fb9b43;
+}
+
+.djl {
+	color:#ff49e7;
 }
 
 #imgurbox {
@@ -33,6 +62,7 @@
 	text-align:center;
 	margin-left:80px;
 	margin-right:80px;
+	opacity:0;
 
 }
 
