--- a/heatmapsheet2.css
+++ b/heatmapsheet2.css
@@ -1,3 +1,26 @@
+#oldbutton {
+	width:120px;
+	font-size:12px;
+	height:25px;
+	padding:5px;
+	background-color:#3e3e3e;
+	border-radius:5px;
+	display:inline-block;
+	line-height:1;
+	position:relative;
+	opacity:0.5;
+}
+
+#pagetitle h1 a {
+	position:relative;
+	right:-60px;
+}
+
+.charcolumn {
+	display:inline-block;
+	width:75px;
+}
+
 #framenumbers {
 	position:absolute;
 	margin:20px;
@@ -428,8 +451,8 @@
 #chardropdown {
 	display:inline-block;
 	position:absolute;
-	width:80px;
-	height:30px;
+	width:160px;
+	height:320px;
 	left:90px;
 	top:0px;
 	z-index:100;
