--- a/heatmapsheet2.css
+++ b/heatmapsheet2.css
@@ -162,6 +162,28 @@
 	position:absolute;
 }
 
+#hurtleft {
+	width:70px;
+	height:50px;
+	background-color:rgba(255, 255, 255, 0.3);
+	cursor:pointer;
+	z-index:251;
+	position:absolute;
+	text-align:center;
+}
+
+#hurttap {
+	width:140px;
+	height:50px;
+	background-color:rgba(255, 255, 255, 0.3);
+	left:980px;
+	z-index:251;
+	position:absolute;
+	text-align:center;
+	margin-left:80px;
+	margin-right:80px;
+}
+
 #draghurt {
 	width:140px;
 	height:50px;
