--- a/heatmapsheet2.css
+++ b/heatmapsheet2.css
@@ -188,13 +188,16 @@
 	width:140px;
 	height:50px;
 	background-color:rgba(255, 255, 255, 0.3);
-	cursor:e-resize;
 	left:980px;
 	z-index:251;
 	position:absolute;
 	text-align:center;
 	margin-left:80px;
 	margin-right:80px;
+}
+
+.notmobiledraghurt {
+	cursor:e-resize;
 	background-image:url(assets/heatmaps/hbdragicon.png);
 	background-size: 100% 100%;
 }
