--- a/heatmapsheet2.css
+++ b/heatmapsheet2.css
@@ -168,8 +168,22 @@
 	background-color:rgba(255, 255, 255, 0.3);
 	cursor:pointer;
 	z-index:251;
-	position:absolute;
 	text-align:center;
+	display:inline-block;
+	background-image:url(assets/heatmaps/hbdragiconleft.png);
+	background-size: 100% 100%;
+}
+
+#hurtright {
+	width:70px;
+	height:50px;
+	background-color:rgba(255, 255, 255, 0.3);
+	cursor:pointer;
+	z-index:251;
+	text-align:center;
+	display:inline-block;
+	background-image:url(assets/heatmaps/hbdragiconright.png);
+	background-size: 100% 100%;
 }
 
 #hurttap {
