--- a/framedatasheet.css
+++ b/framedatasheet.css
@@ -199,6 +199,21 @@
   left:30px;
   font-size:40px;
 }
+
+#speeddisplay {
+  width:90px;
+  height:30px;
+  border-radius:7px;
+  top:30px;
+  left:100px;
+  background-color:#373737;
+}
+
+#speeddisplay p {
+  color:#9e9e9e;
+  font-size:14px;
+}
+
 .nothitting {
   background-color:white;
 }
