--- a/trajectorysheet.css
+++ b/trajectorysheet.css
@@ -74,7 +74,7 @@
 }
 #attackscroll {
   width:150px;
-  height:580px;
+  height:500px;
   display:block;
 	/*overflow-y:scroll;*/
 	overflow-x:hidden;
@@ -266,6 +266,68 @@
 
 .idstats p {
 	margin:5px;
+}
+
+#charging {
+	width:150px;
+	height:115px;
+	display:inline-block;
+  background-color:#252525;
+}
+
+#disableCharge {
+  width:150px;
+  height:115px;
+  position:absolute;
+  background-color:rgba(0, 0, 0, 0.7);
+}
+
+#chargingtitle {
+  width:150px;
+  height:35px;
+  display:inline-block;
+  text-align:center;
+}
+
+#chargingtitle p {
+  margin:5px 0px;
+  font-size:20px;
+}
+
+#chargingNumber {
+	width:110px;
+	height:80px;
+	display:inline-block;
+	font-size:40px;
+  vertical-align:top;
+}
+
+#chargingNumber p {
+  margin:15px;
+  font-size:15px;
+}
+
+#chargingButtonContainer {
+	display:inline-block;
+	width:40px;
+	height:80px;
+  vertical-align:top;
+}
+
+.chargingButton {
+	display:inline-block;
+	width:40px;
+	height:40px;
+	cursor:pointer;
+}
+
+.chargingButton p {
+	margin:0px 10px;
+	font-size:30px;
+}
+
+#chargingNumberEdit{
+  font-size:40px;
 }
 
 #display {
